v1.0.0/modules/schema/pages/class/SteamTurbine.adoc
= `SteamTurbine`
:toclevels: 4


+++Steam turbine.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:SteamTurbine`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
*** xref::class/PrimeMover.adoc[`PrimeMover`]
**** *`SteamTurbine`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
SteamTurbine {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}











SteamSupply {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



SynchronousMachine {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Control {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Measurement {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PSRType {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ReportingGroup {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



OperatingShare {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



AssetInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



VerificationAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ClearanceDocument {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



GenericAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PSREvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Location {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OperationalTag {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}








SteamTurbine -> SteamSupply: SteamSupplys


SteamTurbine -> SynchronousMachine: SynchronousMachines


SteamTurbine -> Control: Controls


SteamTurbine -> Measurement: Measurements


SteamTurbine -> PSRType: PSRType


SteamTurbine -> ConfigurationEvent: ConfigurationEvent


SteamTurbine -> ReportingGroup: ReportingGroup


SteamTurbine -> OperatingShare: OperatingShare


SteamTurbine -> AssetInfo: AssetDatasheet


SteamTurbine -> VerificationAction: VerificationAction


SteamTurbine -> ClearanceDocument: Clearances


SteamTurbine -> GenericAction: GenericAction


SteamTurbine -> PSREvent: PSREvents


SteamTurbine -> Asset: Assets


SteamTurbine -> Location: Location


SteamTurbine -> OperationalTag: OperationalTags


SteamTurbine -> DiagramObject: DiagramObjects


SteamTurbine -> InstanceSet: InstanceSet


SteamTurbine -> Name: Names


SteamTurbine -> ChangeSetMember: PropertiesCIMDataObject


SteamTurbine -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<crossoverTC,`crossoverTC`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Crossover time constant.+++

| <<reheater1TC,`reheater1TC`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++First reheater time constant.+++

| <<reheater2TC,`reheater2TC`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Second reheater time constant.+++

| <<shaft1PowerHP,`shaft1PowerHP`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of power from shaft 1 high pressure turbine output.+++

| <<shaft1PowerIP,`shaft1PowerIP`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of power from shaft 1 intermediate pressure turbine output.+++

| <<shaft1PowerLP1,`shaft1PowerLP1`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of power from shaft 1 first low pressure turbine output.+++

| <<shaft1PowerLP2,`shaft1PowerLP2`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of power from shaft 1 second low pressure turbine output.+++

| <<shaft2PowerHP,`shaft2PowerHP`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of power from shaft 2 high pressure turbine output.+++

| <<shaft2PowerIP,`shaft2PowerIP`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of power from shaft 2 intermediate pressure turbine output.+++

| <<shaft2PowerLP1,`shaft2PowerLP1`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of power from shaft 2 first low pressure turbine output.+++

| <<shaft2PowerLP2,`shaft2PowerLP2`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fraction of power from shaft 2 second low pressure turbine output.+++

| <<steamChestTC,`steamChestTC`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Steam chest time constant.+++

| <<SteamSupplys,`SteamSupplys`>>
| 0..*
| xref::class/SteamSupply.adoc[`SteamSupply`]
| +++Steam turbines may have steam supplied by a steam supply.+++

| <<AssetDatasheet,`AssetDatasheet`>>
| 0..1
| xref::class/AssetInfo.adoc[`AssetInfo`]
| +++Datasheet information for this power system resource.+++

| <<Location,`Location`>>
| 0..1
| xref::class/Location.adoc[`Location`]
| +++Location of this power system resource.+++

| <<PSRType,`PSRType`>>
| 0..1
| xref::class/PSRType.adoc[`PSRType`]
| +++Custom classification for this power system resource.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<primeMoverRating,`primeMoverRating`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Rating of prime mover.+++

| <<Assets,`Assets`>>
| 0..*
| xref::class/Asset.adoc[`Asset`]
| +++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a single AC line segment.+++

| <<Clearances,`Clearances`>>
| 0..*
| xref::class/ClearanceDocument.adoc[`ClearanceDocument`]
| +++All clearances applicable to this power system resource.+++

| <<ConfigurationEvent,`ConfigurationEvent`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this Power System resource.+++

| <<Controls,`Controls`>>
| 0..*
| xref::class/Control.adoc[`Control`]
| +++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or capacitor bank breaker actuator.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<GenericAction,`GenericAction`>>
| 0..*
| xref::class/GenericAction.adoc[`GenericAction`]
| +++The generic action that is performed on the power system resource+++

| <<Measurements,`Measurements`>>
| 0..*
| xref::class/Measurement.adoc[`Measurement`]
| +++The measurements associated with this power system resource.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<OperatingShare,`OperatingShare`>>
| 0..*
| xref::class/OperatingShare.adoc[`OperatingShare`]
| +++The operating shares of this power system resource.+++

| <<OperationalTags,`OperationalTags`>>
| 0..*
| xref::class/OperationalTag.adoc[`OperationalTag`]
| +++All operational tags placed on this power system resource.+++

| <<PSREvents,`PSREvents`>>
| 0..*
| xref::class/PSREvent.adoc[`PSREvent`]
| +++All events associated with this power system resource.+++

| <<ReportingGroup,`ReportingGroup`>>
| 0..*
| xref::class/ReportingGroup.adoc[`ReportingGroup`]
| +++Reporting groups to which this power system resource belongs.+++

| <<SynchronousMachines,`SynchronousMachines`>>
| 0..*
| xref::class/SynchronousMachine.adoc[`SynchronousMachine`]
| +++Synchronous machines this Prime mover drives.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++

| <<VerificationAction,`VerificationAction`>>
| 0..*
| xref::class/VerificationAction.adoc[`VerificationAction`]
| +++The verification action that is performed on the power system resource+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AssetDatasheet]
=== `AssetDatasheet`
+++Datasheet information for this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.AssetDatasheet`
| Cardinality
| 0..1
| Type
| xref::class/AssetInfo.adoc[`AssetInfo`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#Assets]
=== `Assets`
+++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a single AC line segment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#Clearances]
=== `Clearances`
+++All clearances applicable to this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Clearances`
| Cardinality
| 0..*
| Type
| xref::class/ClearanceDocument.adoc[`ClearanceDocument`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#ConfigurationEvent]
=== `ConfigurationEvent`
+++All configuration events created for this Power System resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ConfigurationEvent`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#Controls]
=== `Controls`
+++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or capacitor bank breaker actuator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Controls`
| Cardinality
| 0..*
| Type
| xref::class/Control.adoc[`Control`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#crossoverTC]
=== `crossoverTC`
+++Crossover time constant.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SteamTurbine.crossoverTC`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#GenericAction]
=== `GenericAction`
+++The generic action that is performed on the power system resource+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.GenericAction`
| Cardinality
| 0..*
| Type
| xref::class/GenericAction.adoc[`GenericAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Location]
=== `Location`
+++Location of this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Location`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#Measurements]
=== `Measurements`
+++The measurements associated with this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Measurements`
| Cardinality
| 0..*
| Type
| xref::class/Measurement.adoc[`Measurement`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#OperatingShare]
=== `OperatingShare`
+++The operating shares of this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperatingShare`
| Cardinality
| 0..*
| Type
| xref::class/OperatingShare.adoc[`OperatingShare`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#OperationalTags]
=== `OperationalTags`
+++All operational tags placed on this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperationalTags`
| Cardinality
| 0..*
| Type
| xref::class/OperationalTag.adoc[`OperationalTag`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#primeMoverRating]
=== `primeMoverRating`
+++Rating of prime mover.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PrimeMover.primeMoverRating`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/PrimeMover.adoc[`PrimeMover`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PSREvents]
=== `PSREvents`
+++All events associated with this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSREvents`
| Cardinality
| 0..*
| Type
| xref::class/PSREvent.adoc[`PSREvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#PSRType]
=== `PSRType`
+++Custom classification for this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSRType`
| Cardinality
| 0..1
| Type
| xref::class/PSRType.adoc[`PSRType`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#reheater1TC]
=== `reheater1TC`
+++First reheater time constant.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SteamTurbine.reheater1TC`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#reheater2TC]
=== `reheater2TC`
+++Second reheater time constant.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SteamTurbine.reheater2TC`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ReportingGroup]
=== `ReportingGroup`
+++Reporting groups to which this power system resource belongs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ReportingGroup`
| Cardinality
| 0..*
| Type
| xref::class/ReportingGroup.adoc[`ReportingGroup`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#shaft1PowerHP]
=== `shaft1PowerHP`
+++Fraction of power from shaft 1 high pressure turbine output.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SteamTurbine.shaft1PowerHP`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#shaft1PowerIP]
=== `shaft1PowerIP`
+++Fraction of power from shaft 1 intermediate pressure turbine output.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SteamTurbine.shaft1PowerIP`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#shaft1PowerLP1]
=== `shaft1PowerLP1`
+++Fraction of power from shaft 1 first low pressure turbine output.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SteamTurbine.shaft1PowerLP1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#shaft1PowerLP2]
=== `shaft1PowerLP2`
+++Fraction of power from shaft 1 second low pressure turbine output.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SteamTurbine.shaft1PowerLP2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#shaft2PowerHP]
=== `shaft2PowerHP`
+++Fraction of power from shaft 2 high pressure turbine output.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SteamTurbine.shaft2PowerHP`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#shaft2PowerIP]
=== `shaft2PowerIP`
+++Fraction of power from shaft 2 intermediate pressure turbine output.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SteamTurbine.shaft2PowerIP`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#shaft2PowerLP1]
=== `shaft2PowerLP1`
+++Fraction of power from shaft 2 first low pressure turbine output.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SteamTurbine.shaft2PowerLP1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#shaft2PowerLP2]
=== `shaft2PowerLP2`
+++Fraction of power from shaft 2 second low pressure turbine output.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SteamTurbine.shaft2PowerLP2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#steamChestTC]
=== `steamChestTC`
+++Steam chest time constant.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SteamTurbine.steamChestTC`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#SteamSupplys]
=== `SteamSupplys`
+++Steam turbines may have steam supplied by a steam supply.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SteamTurbine.SteamSupplys`
| Cardinality
| 0..*
| Type
| xref::class/SteamSupply.adoc[`SteamSupply`]


|===

//[discrete]
[#SynchronousMachines]
=== `SynchronousMachines`
+++Synchronous machines this Prime mover drives.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PrimeMover.SynchronousMachines`
| Cardinality
| 0..*
| Type
| xref::class/SynchronousMachine.adoc[`SynchronousMachine`]

| Inherited from
| xref::class/PrimeMover.adoc[`PrimeMover`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#VerificationAction]
=== `VerificationAction`
+++The verification action that is performed on the power system resource+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.VerificationAction`
| Cardinality
| 0..*
| Type
| xref::class/VerificationAction.adoc[`VerificationAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===


